--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -61,8 +61,10 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ github.ref_name }}
+          tags: |
+            latest
+            ${{ github.ref_name }}
           build-args: |
-            - OTS_VERSION=${{ github.ref_name }}
+            OTS_VERSION=${{ github.ref_name }}
           labels: ${{ steps.meta.outputs.labels }}
 
