--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -35,7 +35,6 @@ jobs:
       # Login against a Docker registry except on PR
       # https://github.com/docker/login-action
       - name: Log into registry ${{ env.REGISTRY }}
-        if: github.event_name != 'pull_request'
         uses: docker/login-action@343f7c4344506bcbf9b4de18042ae17996df046d # v3.0.0
         with:
           registry: ${{ env.REGISTRY }}
@@ -59,8 +58,8 @@ jobs:
           context: .
           push: true
           tags: |
-            latest
-            ${{ github.ref_name }}
+            ${{ env.REGISTRY }}:latest
+            ${{ env.REGISTRY }}:${{ github.ref_name }}
           build-args: |
             OTS_VERSION=${{ github.ref_name }}
           labels: ${{ steps.meta.outputs.labels }}
