--- a/persistent/nginx/conf.d/default.conf
+++ b/persistent/nginx/conf.d/default.conf
@@ -1,11 +1,54 @@
 upstream opentakserver {
-    server opentakserver:8081 fail_timeout=30s max_fails=3;
+    server OTS_ADDRESS:OTS_LISTENER_PORT fail_timeout=30s max_fails=3;
 }
 
 server_tokens off;
 
 index index.html;
 root /usr/share/nginx/html;
+
+#******************************************************
+#    WebUI
+#    Port: 80
+#******************************************************
+server {
+
+    listen 80;
+    client_max_body_size 512M;
+
+    #******************************************************
+    #       Docker Healthcheck
+    #******************************************************
+    location = /health {
+        access_log off;
+        add_header 'Content-Type' 'application/json';
+        return 200 '{"status":"healthy"}';
+    }
+
+    #******************************************************
+    #       OpenTakServer WebUI
+    #******************************************************
+    location / {
+        try_files $uri $uri/ /index.html;
+    }
+
+    #******************************************************
+    #       OpenTakServer API
+    #******************************************************
+    location /api {
+        include includes.d/proxy_params;
+        proxy_pass http://opentakserver;
+    }
+
+    location /socket.io {
+        include includes.d/proxy_params;
+        proxy_http_version 1.1;
+        proxy_buffering off;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "Upgrade";
+        proxy_pass http://opentakserver/socket.io;
+    }
+}
 
 #******************************************************
 #    WebUI
