--- a/persistent/nginx/conf.d/default.conf
+++ b/persistent/nginx/conf.d/default.conf
@@ -2,6 +2,10 @@ upstream opentakserver {
     server OTS_ADDRESS:OTS_LISTENER_PORT fail_timeout=30s max_fails=3;
 }
 
+upstream webui {
+    server WEBUI_ADDRESS:80 fail_timeout=30s max_fails=3;
+}
+
 server_tokens off;
 
 index index.html;
@@ -29,7 +33,8 @@ server {
     #       OpenTakServer WebUI
     #******************************************************
     location / {
-        try_files $uri $uri/ /index.html;
+        include includes.d/proxy_params;
+        proxy_pass http://webui;
     }
 
     #******************************************************
@@ -48,6 +53,7 @@ server {
         proxy_set_header Connection "Upgrade";
         proxy_pass http://opentakserver/socket.io;
     }
+
 }
 
 #******************************************************
@@ -75,7 +81,8 @@ server {
     #       OpenTakServer WebUI
     #******************************************************
     location / {
-        try_files $uri $uri/ /index.html;
+        include includes.d/proxy_params;
+        proxy_pass http://webui;
     }
 
     #******************************************************
@@ -93,6 +100,32 @@ server {
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "Upgrade";
         proxy_pass http://opentakserver/socket.io;
+    }
+
+}
+
+#******************************************************
+#    TAK API
+#    Port: 8080
+#******************************************************
+server {
+
+    listen 8080;
+    client_max_body_size 512M;
+
+    #******************************************************
+    #       Marti API
+    #******************************************************
+
+    # Do not allow certificate enrollment on port 8443
+    location /Marti/api/tls {
+        return 404;
+    }
+
+    location /Marti {
+        include includes.d/proxy_params;
+        proxy_http_version 1.1;
+        proxy_pass http://opentakserver;
     }
 }
 
