--- a/persistent/nginx/Dockerfile
+++ b/persistent/nginx/Dockerfile
@@ -1,23 +1,25 @@
 # syntax=docker/dockerfile:1
-FROM python:3.12-slim as build
+#FROM python:3.12-slim as build
 
-WORKDIR /build
+#WORKDIR /build
 
-RUN pip3 install lastversion
-RUN lastversion --assets extract brian7704/OpenTAKServer-UI
+#RUN pip3 install lastversion
+#RUN lastversion --assets extract brian7704/OpenTAKServer-UI
 
 FROM nginx:mainline-bookworm
 ARG OTS_ADDRESS=opentakserver \
-    OTS_LISTENER_PORT=8081
+    OTS_LISTENER_PORT=8081 \
+    WEBUI_ADDRESS=opentakserver-webui
 
 # Copy nginx settings
 COPY ./persistent/nginx/conf.d /etc/nginx/conf.d
 COPY ./persistent/nginx/includes/ /etc/nginx/includes.d
 
 RUN sed -ri -e "s!OTS_ADDRESS!${OTS_ADDRESS}!g" /etc/nginx/conf.d/*.conf && \
-    sed -ri -e "s!OTS_LISTENER_PORT!${OTS_LISTENER_PORT}!g" /etc/nginx/conf.d/*.conf
+    sed -ri -e "s!OTS_LISTENER_PORT!${OTS_LISTENER_PORT}!g" /etc/nginx/conf.d/*.conf && \
+    sed -ri -e "s!WEBUI_ADDRESS!${WEBUI_ADDRESS}!g" /etc/nginx/conf.d/*.conf
 
 # Copy OTS WebUI from build stage
-COPY --from=build /build /usr/share/nginx/html/
+#COPY --from=build /build /usr/share/nginx/html/
 
 EXPOSE 80
