--- a/persistent/nginx/conf.d/default.conf
+++ b/persistent/nginx/conf.d/default.conf
@@ -11,172 +11,4 @@ server_tokens off;
 index index.html;
 root /usr/share/nginx/html;
 
-#******************************************************
-#    WebUI
-#    Port: 80
-#******************************************************
-server {
-
-    listen 80;
-    client_max_body_size 512M;
-
-    #******************************************************
-    #       Docker Healthcheck
-    #******************************************************
-    location = /health {
-        access_log off;
-        add_header 'Content-Type' 'application/json';
-        return 200 '{"status":"healthy"}';
-    }
-
-    #******************************************************
-    #       OpenTakServer WebUI
-    #******************************************************
-    location / {
-        include includes.d/proxy_params;
-        proxy_pass http://webui;
-    }
-
-    #******************************************************
-    #       OpenTakServer API
-    #******************************************************
-    location /api {
-        include includes.d/proxy_params;
-        proxy_pass http://opentakserver;
-    }
-
-    location /socket.io {
-        include includes.d/proxy_params;
-        proxy_http_version 1.1;
-        proxy_buffering off;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "Upgrade";
-        proxy_pass http://opentakserver/socket.io;
-    }
-
-}
-
-#******************************************************
-#    WebUI
-#    Port: 443
-#******************************************************
-server {
-
-    listen 443 ssl;
-    client_max_body_size 512M;
-
-    # OpenTakServer certificates
-    include includes.d/opentakserver_certificate;
-
-    #******************************************************
-    #       Docker Healthcheck
-    #******************************************************
-    location = /health {
-        access_log off;
-        add_header 'Content-Type' 'application/json';
-        return 200 '{"status":"healthy"}';
-    }
-
-    #******************************************************
-    #       OpenTakServer WebUI
-    #******************************************************
-    location / {
-        include includes.d/proxy_params;
-        proxy_pass http://webui;
-    }
-
-    #******************************************************
-    #       OpenTakServer API
-    #******************************************************
-    location /api {
-        include includes.d/proxy_params;
-        proxy_pass http://opentakserver;
-    }
-
-    location /socket.io {
-        include includes.d/proxy_params;
-        proxy_http_version 1.1;
-        proxy_buffering off;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "Upgrade";
-        proxy_pass http://opentakserver/socket.io;
-    }
-
-}
-
-#******************************************************
-#    TAK API
-#    Port: 8080
-#******************************************************
-server {
-
-    listen 8080;
-    client_max_body_size 512M;
-
-    #******************************************************
-    #       Marti API
-    #******************************************************
-
-    # Do not allow certificate enrollment on port 8443
-    location /Marti/api/tls {
-        return 404;
-    }
-
-    location /Marti {
-        include includes.d/proxy_params;
-        proxy_http_version 1.1;
-        proxy_pass http://opentakserver;
-    }
-}
-
-#******************************************************
-#    TAK API
-#    Port: 8443
-#******************************************************
-server {
-
-    listen 8443 ssl;
-    client_max_body_size 512M;
-
-    # OpenTakServer certificates
-    include includes.d/opentakserver_certificate;
-
-    # Require client certificate verification to access the Marti API
-    ssl_verify_client on;
-
-    #******************************************************
-    #       Marti API
-    #******************************************************
-
-    # Do not allow certificate enrollment on port 8443
-    location /Marti/api/tls {
-        return 404;
-    }
-
-    location /Marti {
-        include includes.d/proxy_params;
-        proxy_http_version 1.1;
-        proxy_pass http://opentakserver;
-    }
-}
-#******************************************************
-#       Automatic certificate enrollment
-#       Port: 8446
-#******************************************************
-server {
-
-    listen 8446 ssl;
-
-    # OpenTakServer certificates
-    include includes.d/opentakserver_certificate;
-
-    location / {
-        return 403;
-    }
-
-    location /Marti/api/tls {
-        include includes.d/proxy_params;
-        proxy_http_version 1.1;
-        proxy_pass http://opentakserver;
-    }
-}
+include /etc/nginx/sites-enabled/*;
