--- a/persistent/rabbitmq/99-opentakserver.conf
+++ b/persistent/rabbitmq/99-opentakserver.conf
@@ -1,10 +1,13 @@
-ssl_options.cacertfile = /app/ots/ca/ca.pem
-ssl_options.certfile   = /app/ots/ca/certs/opentakserver/opentakserver.pem
-ssl_options.keyfile    = /app/ots/ca/certs/opentakserver/opentakserver.nopass.key
+# Deprecated features: `transient_nonexcl_queues`: Feature `transient_nonexcl_queues` is deprecated.
+# To test RabbitMQ as if the feature was removed, set this in your configuration:
+deprecated_features.permit.transient_nonexcl_queues = true
 
-# ssl_options.verify     = verify_none
-# ssl_options.fail_if_no_peer_cert  = false
+mqtt.listeners.tcp.default = 1883
 
-# mqtt.default_user = some-user
-# mqtt.default_pass = s3kRe7
-# mqtt.allow_anonymous = false
+auth_backends.1 = internal
+auth_backends.2 = http
+auth_http.http_method   = post
+auth_http.user_path     = http://opentakserver:8081/api/rabbitmq/auth
+auth_http.vhost_path    = http://opentakserver:8081/api/rabbitmq/vhost
+auth_http.resource_path = http://opentakserver:8081/api/rabbitmq/resource
+auth_http.topic_path    = http://opentakserver:8081/api/rabbitmq/topic
