--- a/persistent/nginx/templates/https-443.conf.template
+++ b/persistent/nginx/templates/https-443.conf.template
@@ -1,30 +1,22 @@
 #******************************************************
-#    WebUI
-#    Port: 443
+#   WebUI
+#   Port: 443
 #******************************************************
 server {
-
     listen 443 ssl;
-    client_max_body_size 512M;
+    server_name _;
+
+    client_max_body_size ${CLIENT_MAX_BODY_SIZE};
 
     # OpenTakServer certificates
     include includes.d/opentakserver_certificate;
-
-    #******************************************************
-    #       Docker Healthcheck
-    #******************************************************
-    location = /health {
-        access_log off;
-        add_header 'Content-Type' 'application/json';
-        return 200 '{"status":"healthy"}';
-    }
 
     #******************************************************
     #       OpenTakServer WebUI
     #******************************************************
     location / {
         include includes.d/proxy_params;
-        proxy_pass http://webui;
+        proxy_pass http://${WEBUI_ADDRESS};
     }
 
     #******************************************************
@@ -32,7 +24,7 @@ server {
     #******************************************************
     location /api {
         include includes.d/proxy_params;
-        proxy_pass http://opentakserver;
+        proxy_pass http://${OTS_ADDRESS};
     }
 
     location /socket.io {
@@ -41,7 +33,7 @@ server {
         proxy_buffering off;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "Upgrade";
-        proxy_pass http://opentakserver/socket.io;
+        proxy_pass http://${OTS_ADDRESS}/socket.io;
     }
 
 }
