--- a/persistent/nginx/templates/http-8080.conf.template
+++ b/persistent/nginx/templates/http-8080.conf.template
@@ -1,17 +1,12 @@
 #******************************************************
-#    TAK API
-#    Port: 8443
+#   TAK API
+#   Port: 8080
 #******************************************************
 server {
+    listen 8080;
+    server_name _;
 
-    listen 8443 ssl;
-    client_max_body_size 512M;
-
-    # OpenTakServer certificates
-    include includes.d/opentakserver_certificate;
-
-    # Require client certificate verification to access the Marti API
-    ssl_verify_client on;
+    client_max_body_size ${CLIENT_MAX_BODY_SIZE};
 
     #******************************************************
     #       Marti API
@@ -25,6 +20,6 @@ server {
     location /Marti {
         include includes.d/proxy_params;
         proxy_http_version 1.1;
-        proxy_pass http://opentakserver;
+        proxy_pass http://${OTS_ADDRESS};
     }
 }
