--- a/persistent/nginx/templates/https-8443.conf.template
+++ b/persistent/nginx/templates/https-8443.conf.template
@@ -1,11 +1,18 @@
 #******************************************************
-#    TAK API
-#    Port: 8080
+#   TAK API
+#   Port: 8443
 #******************************************************
 server {
+    listen 8443 ssl;
+    server_name _;
 
-    listen 8080;
-    client_max_body_size 512M;
+    client_max_body_size ${CLIENT_MAX_BODY_SIZE};
+
+    # OpenTakServer certificates
+    include includes.d/opentakserver_certificate;
+
+    # Require client certificate verification to access the Marti API
+    ssl_verify_client on;
 
     #******************************************************
     #       Marti API
@@ -19,6 +26,6 @@ server {
     location /Marti {
         include includes.d/proxy_params;
         proxy_http_version 1.1;
-        proxy_pass http://opentakserver;
+        proxy_pass http://${OTS_ADDRESS};
     }
 }
