--- a/persistent/nginx/templates/https-8446.conf.template
+++ b/persistent/nginx/templates/https-8446.conf.template
@@ -1,10 +1,10 @@
 #******************************************************
-#       Automatic certificate enrollment
-#       Port: 8446
+#   Automatic certificate enrollment
+#   Port: 8446
 #******************************************************
 server {
-
     listen 8446 ssl;
+    server_name _;
 
     # OpenTakServer certificates
     include includes.d/opentakserver_certificate;
@@ -16,6 +16,6 @@ server {
     location /Marti/api/tls {
         include includes.d/proxy_params;
         proxy_http_version 1.1;
-        proxy_pass http://opentakserver;
+        proxy_pass http://${OTS_ADDRESS};
     }
 }
