--- a/compose.nginx.yaml
+++ b/compose.nginx.yaml
@@ -1,24 +1,55 @@
 ---
 services:
-  opentakserver:
+  ots:
     image: ghcr.io/milsimdk/ots-docker-image:latest
-    container_name: opentakserver
+    container_name: ots
     hostname: opentakserver
     restart: unless-stopped
     tty: true
     ports:
       - 127.0.0.1:8081:8081 # OTS listens on this port on the loopback interface for HTTP(S) requests
-      - 0.0.0.0:8088:8088 # TCP CoT streaming port
-      - 0.0.0.0:8089:8089 # SSL CoT streaming port
     volumes:
       - "./persistent/ots:/app/ots"
     depends_on:
       rabbitmq:
         condition: service_healthy
 
-  opentakserver-webui:
+  ots-cot_parser:
+    image: ghcr.io/milsimdk/ots-docker-image:latest
+    container_name: ots-cot_parser
+    hostname: ots-cot_parser
+    restart: unless-stopped
+    tty: true
+    command: python3 /app/.opentakserver_venv/bin/cot_parser
+    healthcheck:
+      disable: true
+    volumes:
+      - "./persistent/ots:/app/ots"
+    depends_on:
+      ots:
+        condition: service_healthy
+
+  ots-eud_handler:
+    image: ghcr.io/milsimdk/ots-docker-image:latest
+    container_name: ots-eud_handler
+    hostname: ots-eud_handler
+    restart: unless-stopped
+    tty: true
+    command: python3 /app/.opentakserver_venv/bin/eud_handler
+    ports:
+      - 0.0.0.0:8088:8088 # TCP CoT streaming port
+      - 0.0.0.0:8089:8089 # SSL CoT streaming port
+    healthcheck:
+      disable: true
+    volumes:
+      - "./persistent/ots:/app/ots"
+    depends_on:
+      ots:
+        condition: service_healthy
+
+  ots-webui:
     image: ghcr.io/milsimdk/ots-ui-docker-image:latest
-    container_name: opentakserver-webui
+    container_name: ots-webui
     hostname: opentakserver-webui
     restart: unless-stopped
 
@@ -42,7 +73,7 @@ services:
       - "./persistent/ots/ca:/app/ots/ca:ro"
       - "./persistent/nginx/templates:/etc/nginx/templates:ro"
     depends_on:
-      opentakserver:
+      ots:
         condition: service_healthy
 
   rabbitmq:
@@ -61,7 +92,7 @@ services:
       retries: 3
 
   mediamtx:
-    image: bluenviron/mediamtx:1.10.0-ffmpeg
+    image: bluenviron/mediamtx:1.13.0-ffmpeg
     container_name: mediamtx
     hostname: mediamtx
     restart: unless-stopped
@@ -82,5 +113,5 @@ services:
       - "./persistent/ots:/app/ots"
       - "./persistent/ots/mediamtx/mediamtx.yml:/mediamtx.yml"
     depends_on:
-      opentakserver:
+      ots:
         condition: service_healthy
