--- a/compose.yaml
+++ b/compose.yaml
@@ -1,6 +1,7 @@
 ---
 services:
   ots:
+    user: "${UID:-0}:${GID:-0}"
     image: ghcr.io/milsimdk/ots-docker-image:latest
     container_name: ots
     hostname: opentakserver
@@ -8,17 +9,22 @@ services:
     tty: true
     ports:
       - 127.0.0.1:8081:8081 # OTS listens on this port on the loopback interface for HTTP(S) requests
+    environment:
+      DOCKER_SQLALCHEMY_DATABASE_URI: "postgresql+psycopg://ots:${POSTGRESQL_PASSWORD:-POSTGRESQL_PASSWORD}@ots-db/ots"
     volumes:
       - "./persistent/ots:/app/ots"
     depends_on:
       rabbitmq:
         condition: service_healthy
+      ots-db:
+        condition: service_healthy
 
-  ots-cot_parser:
+  ots-cot_parser: &ots-helper
     image: ghcr.io/milsimdk/ots-docker-image:latest
     container_name: ots-cot_parser
     hostname: ots-cot_parser
     restart: unless-stopped
+    pull_policy: never
     tty: true
     command: python3 /app/.opentakserver_venv/bin/cot_parser
     healthcheck:
@@ -28,30 +34,45 @@ services:
     depends_on:
       ots:
         condition: service_healthy
-
   ots-eud_handler:
-    image: ghcr.io/milsimdk/ots-docker-image:latest
+    <<: *ots-helper
     container_name: ots-eud_handler
     hostname: ots-eud_handler
-    restart: unless-stopped
-    tty: true
-    command: python3 /app/.opentakserver_venv/bin/eud_handler
+    command: python3 /app/.opentakserver_venv/bin/eud_handler --no-ssl
     ports:
       - 0.0.0.0:8088:8088 # TCP CoT streaming port
+  ots-eud_handler-ssl:
+    <<: *ots-helper
+    container_name: ots-eud_handler-ssl
+    hostname: ots-eud_handler-ssl
+    command: python3 /app/.opentakserver_venv/bin/eud_handler --ssl
+    ports:
       - 0.0.0.0:8089:8089 # SSL CoT streaming port
-    healthcheck:
-      disable: true
-    volumes:
-      - "./persistent/ots:/app/ots"
-    depends_on:
-      ots:
-        condition: service_healthy
 
   ots-webui:
     image: ghcr.io/milsimdk/ots-ui-docker-image:latest
     container_name: ots-webui
     hostname: opentakserver-webui
     restart: unless-stopped
+
+  ots-db:
+    build:
+      context: .
+      dockerfile: persistent/db/Dockerfile
+    container_name: ots-db
+    hostname: ots-db
+    restart: unless-stopped
+    environment:
+      POSTGRES_PASSWORD: ${POSTGRESQL_PASSWORD:-POSTGRESQL_PASSWORD}
+      POSTGRES_USER: ots
+      POSTGRES_DB: ots
+    volumes:
+      - "./persistent/db:/var/lib/postgresql"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -d ots -U ots"]
+      interval: 1s
+      timeout: 5s
+      retries: 10
 
   nginx-proxy:
     build:
@@ -82,7 +103,6 @@ services:
     hostname: rabbitmq
     restart: unless-stopped
     volumes:
-      - "/etc/timezone:/etc/timezone:ro"
       - "./persistent/rabbitmq/enabled_plugins:/etc/rabbitmq/enabled_plugins:ro"
       - "./persistent/rabbitmq/99-opentakserver.conf:/etc/rabbitmq/conf.d/99-opentakserver.conf:ro"
     healthcheck:
@@ -92,6 +112,7 @@ services:
       retries: 3
 
   mediamtx:
+    profiles: ["mediamtx"]
     image: bluenviron/mediamtx:1.13.0-ffmpeg
     container_name: mediamtx
     hostname: mediamtx
